OCLOMRS-341: Fix preview CIEL concept card overflow (#253)

--- a/src/styles/bulk_concepts.scss
+++ b/src/styles/bulk_concepts.scss
@@ -153,6 +153,7 @@ legend.scheduler-border {
   background: #e8e9eb;
   color: #2c2e35;
   padding: .7rem;
+  white-space: normal;
 }
 
 .fas.fas-arrow-left {
